--- a/Степик2/Степик2.html
+++ b/Степик2/Степик2.html
@@ -685,7 +685,7 @@ SELECT * FROM Products WHERE category = &#39;Electronics&#39; AND price &lt; 100
 &lt;img src=&quot;Images/17.png&quot; width=&quot;100%&quot;&gt;
 &lt;img src=&quot;Images/18.png&quot; width=&quot;100%&quot;&gt;
 &lt;img src=&quot;Images/19.png&quot; width=&quot;100%&quot;&gt;
-&lt;img src=&quot;Images/20.png&quot; width=&quot;100%&quot;&gt;v
+&lt;img src=&quot;Images/20.png&quot; width=&quot;100%&quot;&gt;
 &lt;img src=&quot;Images/21.png&quot; width=&quot;100%&quot;&gt;
 &lt;img src=&quot;Images/22.png&quot; width=&quot;100%&quot;&gt;
 &lt;img src=&quot;Images/23.png&quot; width=&quot;100%&quot;&gt;
